creation page identification (documents et biometrics) + fin validation

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -173,6 +173,10 @@
     <script src="scripts/app/agent/etudier/recevability/recevability.js"></script>
     <script src="scripts/app/agent/etudier/recevability/recevability_list.controller.js"></script>
     <script src="scripts/app/agent/etudier/recevability/recevability.controller.js"></script>
+    <script src="scripts/app/agent/etudier/identification/identification.js"></script>
+    <script src="scripts/app/agent/etudier/identification/identification.controller.js"></script>
+    <script src="scripts/app/agent/etudier/identification/documents.controller.js"></script>
+    <script src="scripts/app/agent/etudier/identification/biometrics.controller.js"></script>
     <script src="scripts/app/agent/etudier/validation/validation.js"></script>
     <script src="scripts/app/agent/etudier/validation/validation_list.controller.js"></script>
     <script src="scripts/app/agent/etudier/validation/validation.controller.js"></script>
