--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -36,7 +36,7 @@
 	     	<box-menu boxtitle="main.agent.title.rdv.preview" boxlogo="th-list" disabled="true"></box-menu>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-5 col-lg-4">
-	        <box-menu boxtitle="main.agent.title.rdv.drive" boxlogo="camera"></box-menu>
+	        <box-menu boxtitle="main.agent.title.rdv.drive" boxlogo="camera" ui-sref="etudier/identification"></box-menu>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-5 col-lg-4">
 	        <box-menu boxtitle="main.agent.title.decision" boxlogo="pencil" ui-sref="etudier/validation/list"></box-menu>
