--- a/src/main/webapp/scripts/app/agent/etudier/recevability/recevability_list.html
+++ b/src/main/webapp/scripts/app/agent/etudier/recevability/recevability_list.html
@@ -7,7 +7,8 @@
 	<br>
 	<div class="row">
 		<div class="col-xs-10 col-xs-offset-2 col-sm-10 col-sm-offset-2 col-md-10 col-md-offset-2 col-lg-10 col-lg-offset-2">
-	    	<table class="table">
+	    	<h5 translate="recevability.list.noApplication" ng-show="demandes.length == 0">No application</h5>
+	    	<table class="table" ng-show="demandes.length > 0">
 				<thead>
 					<tr>
 						<th style="width:20%;" translate="recevability.list.lastName"></th>
