creation page application + modif

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -155,6 +155,8 @@
     <script src="scripts/app/usager/account/account.controller.js"></script>
     <script src="scripts/app/usager/account/address/address.js"></script>
     <script src="scripts/app/usager/account/address/address.controller.js"></script>
+    <script src="scripts/app/usager/account/application/application.js"></script>
+    <script src="scripts/app/usager/account/application/application.controller.js"></script>
     <script src="scripts/app/usager/etudier/etudier.js"></script>
     <script src="scripts/app/usager/etudier/etudier.controller.js"></script>
     <script src="scripts/app/usager/etudier/identity/identity.js"></script>
