--- a/src/main/webapp/scripts/app/usager/account/account.html
+++ b/src/main/webapp/scripts/app/usager/account/account.html
@@ -1,13 +1,13 @@
 <div ng-cloak>
     <div class="row" has-role="ROLE_USAGER">
     	<div class="col-xs-12 col-sm-6 col-md-5 col-lg-4">
-        	<box-menu boxtitle="account.title.info" boxlogo="cog" ui-sref="usager/etudier"></box-menu>
+        	<box-menu boxtitle="account.title.info" boxlogo="cog"></box-menu>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-5 col-lg-4">
-	        <box-menu boxtitle="account.title.application" boxlogo="folder-open"></box-menu>
+	        <box-menu boxtitle="account.title.application" boxlogo="folder-open" ui-sref="account/application"></box-menu>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-5 col-lg-4">
-	     	<box-menu boxtitle="account.title.message" boxlogo="envelope" disabled="true"></box-menu>
+	     	<box-menu boxtitle="account.title.message" boxlogo="comment" disabled="true"></box-menu>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-5 col-lg-4">
 	        <box-menu boxtitle="account.title.arrival" boxlogo="map-marker" ui-sref="account/address"></box-menu>
