--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -1,4 +1,5 @@
 <div ng-cloak ng-switch="userType">
+	<br>
     <div ng-switch-when="undefined">
 	    <div class="row row-center">
 	    	<div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
@@ -12,9 +13,9 @@
     		<button class="btn btn-primary btn-home"
     				translate="main.unknown.button.individual"
     				ng-click="choose('individual')">Individual</button>
-    		<button class="btn btn-primary btn-home btn-home-right box-disabled"
+    		<button class="btn btn-primary btn-home btn-home-right"
     				translate="main.unknown.button.company"
-    				ng-click="">Company</button>
+    				ng-click="choose('company')">Company</button>
 	    </div>
     </div>
     <div class="row" ng-switch-when="individual">
@@ -37,30 +38,45 @@
 	        <box-menu boxtitle="main.usager.title.visit" boxlogo="camera" disabled="true"></box-menu>
         </div>
     </div>
-    <div class="row" ng-switch-when="agent">
+    <div class="row" ng-switch-when="company">
     	<div class="col-xs-12 col-sm-6 col-md-5 col-lg-4">
-        	<box-menu boxtitle="main.agent.title.verify" boxlogo="ok" ui-sref="etudier/recevability/list"></box-menu>
+        	<box-menu boxtitle="main.company.title.hire" boxlogo="briefcase" disabled="true"></box-menu>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-5 col-lg-4">
-	        <box-menu boxtitle="main.agent.title.rdv.setting" boxlogo="calendar" disabled="true"></box-menu>
+	        <box-menu boxtitle="main.company.title.declare" boxlogo="pencil" disabled="true"></box-menu>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-5 col-lg-4">
-	     	<box-menu boxtitle="main.agent.title.rdv.preview" boxlogo="th-list" disabled="true"></box-menu>
+	     	<box-menu boxtitle="main.company.title.verify" boxlogo="search" disabled="true"></box-menu>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-5 col-lg-4">
-	        <box-menu boxtitle="main.agent.title.rdv.drive" boxlogo="camera" ui-sref="etudier/identification"></box-menu>
+    </div>
+    <div class="row" ng-switch-when="agent">
+    	<div class="col-xs-12 col-sm-7 col-md-7 col-md-offset-1 col-lg-7 col-lg-offset-1">
+    		<div class="row">
+		        <box-menu class="box-light" boxtitle="main.agent.title.consult" boxlogo="search" boxbadge="{{nbConsult}}" disabled="true"></box-menu>
+	        </div>
+		    <div class="row">
+	        	<box-menu class="box-light" boxtitle="main.agent.title.verify" boxlogo="ok" boxbadge="{{nbRecevability}}" ui-sref="etudier/recevability/list"></box-menu>
+	        </div>
+		    <div class="row">
+		        <box-menu class="box-light" boxtitle="main.agent.title.rdv.drive" boxlogo="camera" boxbadge="{{nbRdv}}" ui-sref="etudier/identification"></box-menu>
+	        </div>
+		    <div class="row">
+		        <box-menu class="box-light" boxtitle="main.agent.title.decision" boxlogo="pencil" boxbadge="{{nbDecision}}" ui-sref="etudier/validation/list"></box-menu>
+	        </div>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-5 col-lg-4">
-	        <box-menu boxtitle="main.agent.title.decision" boxlogo="pencil" ui-sref="etudier/validation/list"></box-menu>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-5 col-lg-4">
-	        <box-menu boxtitle="main.agent.title.question" boxlogo="comment" disabled="true"></box-menu>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-5 col-lg-4">
-	        <box-menu boxtitle="main.agent.title.consult" boxlogo="search" disabled="true"></box-menu>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-5 col-lg-4">
-	        <box-menu boxtitle="main.agent.title.analyse" boxlogo="stats"></box-menu>
+        <div class="col-xs-12 col-sm-4 col-sm-offset-1 col-md-3 col-md-offset-1 col-lg-3 col-lg-offset-1">
+		    <div class="row">
+		        <box-menu boxtitle="main.agent.title.usager" boxlogo="user"></box-menu>
+	        </div>
+        	<div class="row">
+		        <box-menu boxtitle="main.agent.title.rdv.setting" boxlogo="calendar" disabled="true"></box-menu>
+	        </div>
+		    <div class="row">
+		        <box-menu boxtitle="main.agent.title.question" boxlogo="comment" disabled="true"></box-menu>
+	        </div>
+		    <div class="row">
+		        <box-menu boxtitle="main.agent.title.analyse" boxlogo="stats"></box-menu>
+	        </div>
         </div>
     </div>
 </div>
