--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -172,6 +172,8 @@
     <script src="scripts/app/usager/etudier/rdv/rdv.js"></script>
     <script src="scripts/app/usager/etudier/rdv/rdv.controller.js"></script>
     <script src="scripts/app/agent/agent.js"></script>
+    <script src="scripts/app/agent/control/control.js"></script>
+    <script src="scripts/app/agent/control/control.controller.js"></script>
     <script src="scripts/app/agent/etudier/etudier.js"></script>
     <script src="scripts/app/agent/etudier/etudier.controller.js"></script>
     <script src="scripts/app/agent/etudier/recevability/recevability.js"></script>
