--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -66,7 +66,7 @@
         </div>
         <div class="col-xs-12 col-sm-4 col-sm-offset-1 col-md-3 col-md-offset-1 col-lg-3 col-lg-offset-1">
 		    <div class="row">
-		        <box-menu boxtitle="main.agent.title.usager" boxlogo="user"></box-menu>
+		        <box-menu boxtitle="main.agent.title.usager" boxlogo="user" disabled="true"></box-menu>
 	        </div>
         	<div class="row">
 		        <box-menu boxtitle="main.agent.title.rdv.setting" boxlogo="calendar" disabled="true"></box-menu>
@@ -75,7 +75,7 @@
 		        <box-menu boxtitle="main.agent.title.question" boxlogo="comment" disabled="true"></box-menu>
 	        </div>
 		    <div class="row">
-		        <box-menu boxtitle="main.agent.title.analyse" boxlogo="stats"></box-menu>
+		        <box-menu boxtitle="main.agent.title.analyse" boxlogo="stats" ui-sref="agent/control"></box-menu>
 	        </div>
         </div>
     </div>
