ajout biometrie photo avec webcam

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -68,6 +68,8 @@
   		<script src="bower_components/moment/min/moment-with-locales.min.js"></script>
   		<script src="bower_components/angular-bootstrap-datetimepicker-directive/angular-bootstrap-datetimepicker-directive.min.js"></script>
   		<script src="bower_components/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
+  		<script src="bower_components/webcamjs/webcam.min.js"></script>
+		<script src="bower_components/ng-camera/dist/ng-camera.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
