ajout biometrie avec signature

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -70,6 +70,7 @@
   		<script src="bower_components/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   		<script src="bower_components/webcamjs/webcam.min.js"></script>
 		<script src="bower_components/ng-camera/dist/ng-camera.js"></script>
+		<script src="bower_components/signature_pad/signature_pad.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
