--- a/src/main/webapp/scripts/app/usager/account/account.html
+++ b/src/main/webapp/scripts/app/usager/account/account.html
@@ -1,6 +1,6 @@
 <div ng-cloak>
     <div class="row" has-role="ROLE_USAGER">
-    	<div class="col-xs-12 col-sm-6 col-md-5 col-lg-4" ui-sref="account/address">
+    	<div class="col-xs-12 col-sm-6 col-md-5 col-lg-4" ui-sref="account/infos">
         	<box-menu boxtitle="account.title.info" boxlogo="cog"></box-menu>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-5 col-lg-4">
