--- a/src/main/webapp/scripts/app/usager/etudier/identity/identity.html
+++ b/src/main/webapp/scripts/app/usager/etudier/identity/identity.html
@@ -141,6 +141,8 @@
 			<div class="col-xs-6 col-xs-offset-3 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
 			    <div class="form-group">
 			        <label translate="identity.form.passport" for="field_passport">Passport</label>
+			    	<span class="glyphicon glyphicon-info-sign form-info" id="passport-info"
+			    			tabindex="0" data-placement="right" data-toggle="popover" data-trigger="hover" data-content="{{'identity.form.passport.tooltip' | translate}}"></span>
 			        <div class="input-group">
 				        <span class="input-group-addon" id="logo_passport">
 	                        <span class="fa fa-file"></span>
@@ -162,6 +164,8 @@
 			    </div>
 			    <div class="form-group">
 			        <label translate="identity.form.birthAct" for="field_birthAct">BirthAct</label>
+			        <span class="glyphicon glyphicon-info-sign form-info" id="birthAct-info"
+			    			tabindex="0" data-placement="right" data-toggle="popover" data-trigger="hover" data-content="{{'identity.form.birthAct.tooltip' | translate}}"></span>
 			        <div class="input-group">
 				        <span class="input-group-addon" id="logo_birthAct">
 	                        <span class="fa fa-file"></span>
@@ -195,10 +199,16 @@
 
 <script type="text/javascript">
 	$("html, body").animate({ scrollTop: 0 }, "slow");
-	
+
+	$(function () {
+		$('#passport-info').popover();
+	});
+	$(function () {
+		$('#birthAct-info').popover();
+	});
 	$(function () {
 		$('#field_lastName').popover();
-	})
+	});
 	
 	$('#logo_passport').click(function(){
 	    $('#file_passport').click();
