--- a/src/main/resources/mails/recevabilityEmail.html
+++ b/src/main/resources/mails/recevabilityEmail.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
-        <title th:text="#{email.activation.title}">activation</title>
+        <title th:text="#{email.recevability.title}">recevability</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     </head>
     <body>
-        <p th:text="#{email.activation.greeting}">
+        <p th:text="#{email.recevability.greeting(${user.firstName}, ${user.lastName})}">
             Hello,
         </p>
         <br/>
-        <p th:text="#{email.activation.text}">
-            Your account has been created, please click on the URL below to activate it:
+        <p th:text="#{email.recevability.text1(${user.id})}">
+            Recevability success
+        </p>
+        <p th:text="#{email.recevability.text2}">
+            Get appointment here :
         </p>
         <p>
-            <a th:href="@{|${baseUrl}/#/activate?key=${user.activationKey}|}"
-               th:text="#{email.activation.link}">Activate your account</a>
+            <a th:href="@{|${baseUrl}/#/etudier/rdv|}"
+               th:text="#{email.recevability.link}">rdv</a>
         </p>
         <br/>
         <p>
